# flare-server-core

./: .gitignore  Cargo.toml  LICENSE  NOTICE  OPTIMIZATION_SUMMARY.md  README.md  README_CONTEXT.md
flare-core-base/: Cargo.toml  README.md
flare-core-base/src/: lib.rs
flare-core-base/src/config/: layered.rs  mod.rs
flare-core-base/src/context/: README.md  core.rs  mod.rs  typemap.rs
flare-core-base/src/error/: builder.rs  code.rs  conversions.rs  flare_error.rs  grpc.rs  macros.rs  mod.rs  proto.rs
flare-core-base/src/i18n/: mod.rs
flare-core-base/src/id/: mod.rs  snowflake.rs
flare-core-base/src/types/: mod.rs
flare-core-base/src/utils/: context.rs  mod.rs
flare-core-infra/: Cargo.toml
flare-core-infra/src/: lib.rs
flare-core-infra/src/auth/: composite.rs  mod.rs  principal.rs  provider.rs  token.rs
flare-core-infra/src/auth/store/: mod.rs
flare-core-infra/src/kv/: backend.rs  mod.rs  store.rs
flare-core-infra/src/telemetry/: mod.rs
flare-core-infra/tests/: auth_principal.rs
flare-core-messaging/: Cargo.toml
flare-core-messaging/src/: lib.rs
flare-core-messaging/src/eventbus/: README.md  constants.rs  domain_event_bus.rs  envelope.rs  event_bus.rs  in_memory_domain_event_bus.rs  in_memory_topic_event_bus.rs  mod.rs  mq_consumer.rs  mq_topic.rs  topic_event_bus.rs
flare-core-messaging/src/mq/: README.md  context.rs  mod.rs  process_ack_metrics.rs  producer.rs
flare-core-messaging/src/mq/consumer/: adapter.rs  dispatcher.rs  failure.rs  handler.rs  mod.rs  runtime.rs  task.rs  types.rs
flare-core-messaging/src/mq/kafka/: config.rs  consumer.rs  mod.rs  producer.rs
flare-core-messaging/src/mq/nats/: config.rs  consumer.rs  mod.rs  producer.rs
flare-core-runtime/: Cargo.toml  INTEGRATION.md  README.md  SIMPLE_MODE.md
flare-core-runtime/src/: README.md  config.rs  error.rs  lib.rs  runtime.rs
flare-core-runtime/src/health/: checker.rs  mod.rs  trait.rs
flare-core-runtime/src/metrics/: mod.rs  trait.rs
flare-core-runtime/src/middleware/: chain.rs  mod.rs  trait.rs
flare-core-runtime/src/plugin/: manager.rs  mod.rs  trait.rs
flare-core-runtime/src/registry/: mod.rs  trait.rs
flare-core-runtime/src/signal/: channel.rs  composite.rs  ctrl_c.rs  mod.rs  trait.rs  unix.rs
flare-core-runtime/src/state/: event.rs  mod.rs  tracker.rs
flare-core-runtime/src/task/: manager.rs  mod.rs  spawn.rs  state.rs  trait.rs
flare-core-runtime/src/utils/: mod.rs  topology.rs
flare-core-transport/: Cargo.toml
flare-core-transport/src/: lib.rs
flare-core-transport/src/discovery/: README.md  config.rs  discover.rs  examples.rs  factory.rs  instance.rs  mod.rs
flare-core-transport/src/discovery/backend/: consul.rs  dns.rs  etcd.rs  mesh.rs  mod.rs
flare-core-transport/src/grpc/: adapter.rs  mod.rs
flare-core-transport/src/grpc/client/: context.rs  interceptor.rs  mod.rs
flare-core-transport/src/grpc/health/: mod.rs
flare-core-transport/src/grpc/interceptor/: auth.rs  logging.rs  mod.rs  tracing.rs
flare-core-transport/src/grpc/middleware/: context.rs  mod.rs  rate_limit.rs  retry.rs
flare-core-transport/src/grpc/retry/: exponential.rs  fixed.rs  mod.rs
flare-core-transport/src/grpc/server/: mod.rs
flare-core-transport/src/grpc/server/interceptor/: auth.rs  composite.rs  tracing.rs
flare-core-transport/src/grpc/server/middleware/: context.rs  timeout.rs
flare-core-transport/src/grpc/utils/: context_utils.rs  metadata_codec.rs  mod.rs
flare-core-transport/src/http/: adapter.rs  context.rs  error.rs  mod.rs
flare-core-transport/src/http/middleware/: auth.rs  mod.rs  rate_limit.rs  tracing.rs
flare-core-transport/src/http/response/: mod.rs
src/: config.rs  lib.rs
src/auth/: mod.rs  token.rs
src/auth/store/: redis.rs
src/client/: context.rs  interceptor.rs  metadata_codec.rs  mod.rs
src/context/: conversions.rs  core.rs  examples.rs  mod.rs  typemap.rs
src/discovery/: config.rs  discover.rs  examples.rs  factory.rs  instance.rs  mod.rs
src/discovery/backend/: consul.rs  dns.rs  etcd.rs  mesh.rs  mod.rs
src/error/: code.rs  conversions.rs  grpc.rs  localized.rs  mod.rs  proto.rs
src/event_bus/: README.md  envelope.rs  event_bus.rs  mod.rs  topic_bus.rs
src/event_bus/backend/: kafka.rs  mod.rs
src/event_bus/kafka/: consumer_builder.rs  consumer_config.rs  mod.rs  producer_builder.rs  producer_config.rs
src/interceptor/: auth.rs  composite.rs  logging.rs  mod.rs
src/kafka/: README.md  consumer_builder.rs  consumer_config.rs  mod.rs  producer_builder.rs  producer_config.rs
src/kv/: backend.rs  mod.rs  store.rs
src/metrics/: mod.rs
src/middleware/: context.rs  mod.rs  rate_limit.rs
src/registry/: consul.rs  etcd.rs  load_balancer.rs  mesh.rs  mod.rs  service_manager.rs  trait_def.rs
src/runtime/: config.rs  mod.rs  runtime.rs  task.rs
src/server/: mod.rs
src/utils/: mod.rs
tests/: README.md  consul_backend_test.rs  etcd_backend_test.rs
