[package]
name = "flare-server-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Flare Team"]
license = "MIT"
description = "Flare IM Server Core Library - Complete gRPC infrastructure for server-side including interceptors, middleware, error handling, service discovery, etc."
repository = "https://github.com/flare-im/flare-im"
homepage = "https://github.com/flare-im/flare-im"
documentation = "https://docs.rs/flare-server-core"
readme = "README.md"
exclude = [
    "target/",
    "Cargo.lock",
    "*.md",
    "!README.md",
]

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# 错误处理
thiserror = "2.0"

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# 工具
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
anyhow = "1"
flare-proto = { path = "../flare-proto" }

# Service Mesh 和
tower = "0.5"

# etcd 客户端
etcd-client = "0.17"

# HTTP 客户端（用于 Consul）
reqwest = { version = "0.12", features = ["json"] }

# 服务发现和广播
async-broadcast = "0.7"
futures = "0.3"
futures-util = "0.3"

# 随机数生成（用于负载均衡）
rand = "0.8"

# Kafka 客户端（可选，用于消息队列）
rdkafka = { version = "0.38", optional = true }

# 指标收集（可选）
prometheus = { version = "0.14", optional = true }

# OpenTelemetry（可选）
opentelemetry = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", optional = true }

jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }

[features]
default = []
metrics = ["prometheus"]
tracing = ["opentelemetry", "opentelemetry-otlp", "opentelemetry_sdk"]
tower = ["tower/discover", "tower/balance"]
kafka = ["rdkafka"]
discovery = []
