[package]
name = "flare-server-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Flare Team"]
license = "MIT"
description = "Flare IM Server Core Library - Complete gRPC infrastructure for server-side including interceptors, middleware, error handling, service discovery, etc."
repository = "https://github.com/flare-im/flare-im"
homepage = "https://github.com/flare-im/flare-im"
documentation = "https://docs.rs/flare-server-core"
readme = "README.md"
exclude = [
    "target/",
    "Cargo.lock",
    "*.md",
    "!README.md",
]

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
http = "1.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
base64 = "0.22"

# 错误处理
thiserror = "2.0"

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# 工具
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
anyhow = "1"
flare-proto = { path = "../flare-proto", optional = true }

# Service Mesh 和中间件（timeout 为 TimeoutLayer 所需）
tower = { version = "0.5", features = ["timeout"] }

# etcd 客户端（服务发现 etcd 后端）
etcd-client = "0.17"

# HTTP 客户端（服务发现 Consul 后端）
reqwest = { version = "0.12", features = ["json"] }

# 服务发现和广播
async-broadcast = "0.7"
futures = "0.3"
futures-util = "0.3"

# 随机数生成（用于负载均衡）
rand = "0.8"

# Kafka 客户端（可选，用于消息队列）
rdkafka = { version = "0.38", optional = true }

# 指标收集（可选）
prometheus = { version = "0.14", optional = true }

# OpenTelemetry（可选）
opentelemetry = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", optional = true }

jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }

[features]
default = []
# 与 flare-proto 的错误/上下文转换（im-core 等需要）
proto = ["flare-proto"]
# Kafka：event_bus 通用生产者/消费者 + TopicEventBus 后端（storage-writer / orchestrator / push / conversation 等）
kafka = ["rdkafka"]
# 服务发现（占位，当前 discovery 始终编译；可按需用于条件编译或文档）
discovery = []
# 指标：Prometheus 集成
metrics = ["prometheus"]
# 分布式追踪：OpenTelemetry
tracing = ["opentelemetry", "opentelemetry-otlp", "opentelemetry_sdk"]
tower = ["tower/discover", "tower/balance"]
