[package]
name = "flare-core-base"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared server primitives for Flare services: context, errors, configuration, IDs, and common types."
repository.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = []
# Protobuf 错误桥接：FlareError ↔ flare_proto ErrorDetail，gRPC Status details 携带结构化错误
proto = ["dep:flare-proto", "dep:bytes"]

[dependencies]
# 异步运行时
tokio = { workspace = true }
tokio-util = { workspace = true }

# gRPC (用于错误转换)
tonic = { workspace = true }
prost = { workspace = true }

# Proto 错误桥接（proto feature）
flare-proto = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

# 序列化
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }

# 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# 日志
tracing = { workspace = true }

# 工具
chrono = { workspace = true }
uuid = { workspace = true }

# 存储 (用于错误转换)
redis = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
