[package]
name = "flare-core-messaging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Flare Core Messaging - 消息层 (MQ + Event Bus)"
repository.workspace = true

[features]
# 默认功能
default = ["mq", "eventbus"]

# 消息队列基础
mq = []

# Kafka 支持
kafka = ["mq", "dep:rdkafka"]

# NATS 支持
nats = ["mq"]

# 事件总线
eventbus = []

# Protobuf 载荷路径（check-cfg / 可选序列化分支）
proto = []

[dependencies]
# ===== 内部依赖 =====
flare-core-base = { workspace = true }
flare-core-runtime = { workspace = true }

# ===== 异步运行时 =====
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# ===== gRPC =====
prost = { workspace = true }
tonic = { workspace = true }

# ===== 工具 =====
async-trait = { workspace = true }

# ===== 序列化 =====
serde = { workspace = true }
serde_json = { workspace = true }

# ===== 错误处理 =====
thiserror = { workspace = true }
anyhow = { workspace = true }

# ===== 日志追踪 =====
tracing = { workspace = true }

# ===== 工具 =====
chrono = { workspace = true }
uuid = { workspace = true }
async-broadcast = { workspace = true }

# ===== 消息队列 (可选) =====
rdkafka = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = "0.4"
