[package]
name = "flare-core-messaging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Event bus and MQ primitives for Flare server applications, including NATS and Kafka support."
repository.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
# 默认功能
default = ["mq", "eventbus"]

# 消息队列基础
mq = []

# NATS JetStream 支持
nats = ["mq", "dep:async-nats", "dep:prometheus"]

# Apache Kafka 支持
kafka = ["mq", "dep:rdkafka", "dep:prometheus"]

# 事件总线
eventbus = []

# Protobuf 载荷路径（EventBusEnvelope 序列化分支）
proto = ["dep:flare-proto"]

[dependencies]
# ===== 内部依赖 =====
flare-core-base = { workspace = true }
flare-core-runtime = { workspace = true }
flare-proto = { workspace = true, optional = true }

# ===== 异步运行时 =====
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# ===== gRPC =====
prost = { workspace = true }
tonic = { workspace = true }

# ===== 工具 =====
async-trait = { workspace = true }

# ===== 序列化 =====
serde = { workspace = true }
serde_json = { workspace = true }

# ===== 错误处理 =====
thiserror = { workspace = true }
anyhow = { workspace = true }

# ===== 日志追踪 =====
tracing = { workspace = true }
prometheus = { workspace = true, optional = true }

# ===== 工具 =====
chrono = { workspace = true }
uuid = { workspace = true }
async-broadcast = { workspace = true }

# ===== 消息队列 (可选) =====
async-nats = { workspace = true, optional = true }
rdkafka = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = "0.4"
